--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,12 +1,12 @@
 ASFLAGS  :=-f elf32 -O0
-CFLAGS32 :=-Wall -O0 -m32 -ffreestanding -fno-stack-protector -nostdlib -nostdinc -fno-align-functions -I ./include
-LDFLAGS  := -Map Kernel.map -m elf_i386 -T link.ld
+CFLAGS32 :=-Wall -O0 -m32 -ffreestanding -nostdlib -nostdinc -I ./include
+LDFLAGS  :=-m elf_i386 -Map Kernel.map -m elf_i386 -T link.ld
 AS=nasm
 CC=gcc
 LD=ld
 
 
-OBJS= setup.o vector.o main.o os.o data.o dscptor.o exceptions.o string.o gui.o font8x16.o bmp.o console.o cpuid.o apic.o lvt.o irq.o paging.o memory.o thread.o exec.o exit.o syscall.o pci.o ata.o disk.o fat.o media.o ps2.o mouse.o keyboard.o rtc.o i82540.o process.o lib.o
+OBJS= setup.o vector.o main.o os.o data.o dscptor.o exceptions.o string.o gui.o font8x16.o bmp.o console.o cpuid.o apic.o lvt.o irq.o paging.o memory.o thread.o exec.o exit.o syscall.o pci.o ata.o disk.o media.o ps2.o mouse.o keyboard.o rtc.o i82540.o process.o lib.o fat.o
 
 .PHONY: kernel.bin clean move clearscreen
 
