--- a/user/Makefile
+++ b/user/Makefile
@@ -22,8 +22,13 @@ EDIT	:=edit.o
 TEST	:=test.o
 
 DISK	:=disk.o
+FASM	:=__fasm/fasm.o
 
-.PHONY: task.sys msgbox.sys gserver.sys xserver.sys files.sys terminal.sys shell.sys mouse.sys edit.sys test.bin disk.sys clean move
+.PHONY: task.sys msgbox.sys gserver.sys xserver.sys files.sys terminal.sys shell.sys mouse.sys edit.sys test.bin disk.sys fasm.bin clean move
+
+fasm.bin: $(HEAD) $(FASM) $(XLIB)
+	$(LD) $(LDFLAGS) -o $@ $^
+	
 
 task.sys: $(HEAD) $(TASK) $(XLIB)
 	$(LD) $(LDFLAGS) -o $@ $^
